"Mark as Asset" operator malfunctioning for materials inside custom panel #114024

Closed
opened 2023-10-22 06:08:48 +02:00 by Bortroy · 2 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 1660 Super

Blender Version
Broken: 3.6.x
Worked: 3.5.x

Caused by f22e2bab72

Short description of error
When creating a custom panel in the 3D Viewport n-panel using the Python API, if the active material is exposed as a property the "Mark as Asset" operator incorrectly marks the selected object as an asset, instead of the material. This does not happen if the panel is within an existing properties tab, e.g. Tool, and does not happen in earlier Blender versions.

Exact steps for others to reproduce the error

  1. Open the attached example.blend file.
  2. Run the my_panel.py module with CTRL + P in the Text Editor.
  3. Select the Cube object.
  4. Within the 3D Viewport n-panel, navigate to My Panel inside the My Panels tab.
  5. Right click the active material property from within the panel and select Mark as Asset.
  6. The Cube object will be incorrectly marked as an asset, instead of the material.
  7. If step 5 is repeated (the Mark as Asset option is still enabled), the following error is printed:

Error: Selected data-blocks are already assets (or do not support use as assets)

Note that, if one sets bl_category = 'Tool' and My Panel is then located within the Tool properties, the material is correctly marked as an asset using the above procedure.

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 1660 Super **Blender Version** Broken: 3.6.x Worked: 3.5.x Caused by f22e2bab72 **Short description of error** When creating a custom panel in the 3D Viewport n-panel using the Python API, if the active material is exposed as a property the "Mark as Asset" operator incorrectly marks the selected object as an asset, instead of the material. This does not happen if the panel is within an existing properties tab, e.g. Tool, and does not happen in earlier Blender versions. **Exact steps for others to reproduce the error** 1. Open the attached example.blend file. 2. Run the my_panel.py module with CTRL + P in the Text Editor. 3. Select the Cube object. 4. Within the 3D Viewport n-panel, navigate to My Panel inside the My Panels tab. 5. Right click the active material property from within the panel and select Mark as Asset. 6. The Cube object will be incorrectly marked as an asset, instead of the material. 7. If step 5 is repeated (the Mark as Asset option is still enabled), the following error is printed: **Error: Selected data-blocks are already assets (or do not support use as assets)** Note that, if one sets bl_category = 'Tool' and My Panel is then located within the Tool properties, the material is correctly marked as an asset using the above procedure.
Bortroy added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-22 06:08:49 +02:00
Iliya Katushenock added the
Interest
Python API
Interest
Asset Browser
labels 2023-10-22 07:43:40 +02:00
Member

Thanks for the report. I can confirm the regression, bisecting...

Thanks for the report. I can confirm the regression, bisecting...
Pratik Borhade added this to the 4.0 milestone 2023-10-23 07:20:35 +02:00
Member

Caused by f22e2bab72
@JulianEisel ^

Caused by f22e2bab726af6349f99e10c903ee3ac49c0c64b @JulianEisel ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-23 19:19:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114024
No description provided.